fixing padding of product table on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,7 @@ th {
       width: 100%; }
   th,
   td {
-    padding: 0px;
+    padding: 3px;
     font-size: 15px; }
   th {
     font-size: 20px; } }
