--- a/scss/pages/product.scss
+++ b/scss/pages/product.scss
@@ -95,7 +95,7 @@ th {
 
   th,
   td {
-    padding: 0px;
+    padding: 3px;
 
     font-size: 15px;
   }
